Fixed wrong width in Op-Logo image

--- a/css/pr-tournament-boardmap.css
+++ b/css/pr-tournament-boardmap.css
@@ -586,7 +586,7 @@ div#Op-Header-Icons {
 }
 
 #Op-Logo {
-    width: 35px;
+    width: 30px;
     height: 53px;
     float: left;
     margin: 0px 14px;
